src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Predicted_Total_3_yr_Cost_Savings_Scn_2__c</fullName>
        <formula>(ROUND(Estimated_Enrolled_Population__c,0))*3624</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Predicted_Total_3_yr_Cost_Savings_Scn_3__c</fullName>
        <formula>(ROUND(Estimated_Enrolled_Population__c,0))*4477</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_List__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Product List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <label>Program Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Net_New_Diabetes_PPPM__c</fullName>
        <description>Livongo for Diabetes PPPM - Cost of Diabetes Supplies</description>
        <formula>Livongo_for_Diabetes_PPPM__c -  Cost_of_diabetes_testing_supplies__c</formula>
        <inlineHelpText>Livongo for Diabetes PPPM - Cost of Diabetes Supplies</inlineHelpText>
        <label>Projected Net New Diabetes PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Net_New_Monthly_Cost__c</fullName>
        <description>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies</description>
        <formula>( Livongo_for_Diabetes_PPPM__c -  Cost_of_diabetes_testing_supplies__c ) * Estimated_Enrolled_Population__c</formula>
        <inlineHelpText>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies</inlineHelpText>
        <label>Projected Net New Monthly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Net_New_Yearly_Cost__c</fullName>
        <description>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies * 12</description>
        <formula>Projected_Net_New_Monthly_Cost__c * 12</formula>
        <inlineHelpText>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies * 12</inlineHelpText>
        <label>Projected Net New Yearly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_ROI_3_Year_PPPM_Savings__c</fullName>
        <formula>Projected_ROI_Annual_PPPM_Savings__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI 3=Year PPPM Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_ROI_Annual_PPPM_Savings__c</fullName>
        <formula>Total_Year_1_Savings__c /  Estimated_Enrolled_HTN_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI Annual PPPM Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_ROI_Scenario_1__c</fullName>
        <formula>((2783*0.39*0.91*0.8)+(4175*0.61*0.8)) / Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_ROI_Scenario_2__c</fullName>
        <formula>((3595*0.39*0.91*0.8)+(5335*0.61*0.8)) / Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_ROI_Scenario_3__c</fullName>
        <formula>((4407*0.39*0.91*0.8)+(6610*0.61*0.8)) / Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Total_DPP_Cases_Prevented__c</fullName>
        <formula>DPP_Projected_Cases_Prevented_0_3__c + DPP_Projected_Cases_Prevented_3_5__c + DPP_Projected_Cases_Prevented_5_7__c + DPP_Projected_Cases_Prevented_7_10__c + DPP_Projected_Cases_Prevented_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Total DPP Cases Prevented</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Total_Contract_Value__c</fullName>
        <formula>IF 
( ISPICKVAL(Type,&quot;Renewal&quot;), 
(Livongo_for_Diabetes_PwDs__c * Livongo_for_Diabetes_PPPM__c * Livongo_for_Diabetes_Program_Term__c ) 
+ 
(Livongo_for_Hypertension_PwHs__c * Livongo_for_Hypertension_PPPM__c * Livongo_for_Hypertension_Program_Term__c ) 
+ 
( Livongo_for_Weight_Management_DP_PwOs__c * Livongo_for_Weight_Management_DP_PPPM__c * Livongo_for_WM_DP_Program_Term__c ), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_CIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creates a task and assigns to Client Implementation Director for purposes of requesting CIM to be assigned to Opportunity.</description>
        <inlineHelpText>Creates a task and assigns to Client Implementation Director for purposes of requesting CIM to be assigned to Opportunity.</inlineHelpText>
        <label>Request CIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_CSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once you are ready to request a CSM, check this box</description>
        <inlineHelpText>Once you are ready to request a CSM, check this box</inlineHelpText>
        <label>Request CIM / CSM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAs__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>SLAs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>SOW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Requirements_Status__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Security Requirements &amp; Status</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_New_Client_Gift__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <formula>Contract.Send_New_Client_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is in Sync with Send New Client Gift on Client Overview</inlineHelpText>
        <label>Send New Client Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supporting_PBM_Executive_Count__c</fullName>
        <inlineHelpText>Roll Up Helper - count of Supporting PBM Exec related contacts</inlineHelpText>
        <label>Supporting PBM Executive Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDealHandoffNotes__c</fullName>
        <description>Key information about a deal that can be referenced during a customer&apos;s onboarding project.</description>
        <inlineHelpText>Use this field to store key information about a deal that can be referenced during a customer&apos;s onboarding project.</inlineHelpText>
        <label>Deal Handoff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingKickoffCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</description>
        <inlineHelpText>This field will be automatically updated if the TaskRay Onboarding Kickoff Flow has been completed for a given Opportunity.</inlineHelpText>
        <label>Onboarding Kickoff Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskRay_Wizard_Name__c</fullName>
        <description>Used in TaskRay Project Wizard flow. Not to be exposed on any page layout</description>
        <formula>Name &amp; &apos; - &apos; &amp; TEXT( StageName ) &amp; &apos; - &apos; &amp;  TEXT( CloseDate )</formula>
        <label>TaskRay Wizard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_DPP_Cost_Savings_over_3_Years__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c
*
9294.94274697631)
/
Estimated_Enrolled_DPP_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total DPP Cost Savings over 3 Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DPP_Per_Member_Cost_Attrition__c</fullName>
        <formula>(
( Year_1_DPP_Per_Member_cost__c * Estimated_Enrolled_DPP_Population__c )
+
(( Year_2_DPP_Per_Member_Cost__c * Estimated_Enrolled_DPP_Population__c)*0.5)
+
(( Year_2_DPP_Per_Member_Cost__c * Estimated_Enrolled_DPP_Population__c)*0.25)
)
/
Estimated_Enrolled_DPP_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total DPP Per Member (Cost Attrition)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_DPP_Per_Member_Cost_No_Attrition__c</fullName>
        <formula>Year_1_DPP_Per_Member_cost__c +( Year_2_DPP_Per_Member_Cost__c *2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total DPP Per Member Cost (No Attrition)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Products__c</fullName>
        <label>Total Primary Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Record_Type__c</field>
            <operation>equals</operation>
            <value>Primary_Product</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Year_1_Savings_PPPM__c</fullName>
        <formula>Total_Year_1_Savings__c /  (12* (Livongo_for_Hypertension_PwHs__c * 0.2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Year 1 Savings PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Year_1_Savings__c</fullName>
        <formula>Annual_Heart_Attack_Cost_Savings__c + Annual_Stroke_Cost_Savings__c + Annual_ED_Cost_Savings__c + Annual_Office_Visit_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Year 1 Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wellness_Landscape__c</fullName>
        <description>Text field to describe &quot;Wellness Landscape&quot; at client, goals for launching Livongo</description>
        <inlineHelpText>Does the client have existing wellness vendors? Are they launching any other vendors at the same time? What is the client’s approach to wellness initiatives?</inlineHelpText>
        <label>Wellness Landscape</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_Heart_Attack_Cost_Savings__c</fullName>
        <formula>Annual_Heart_Attack_Cost_Savings__c *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Annual Heart Attack Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_Heart_Attacks_Avoided__c</fullName>
        <formula>Annual_Heart_Attacks_Avoided__c * 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Annual Heart Attacks Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_ROI__c</fullName>
        <formula>Y2_Total_Annual_Savings__c /
(Livongo_for_Hypertension_PPPM__c * ( Livongo_for_Hypertension_PwHs__c *0.2) *12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Annual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_Stroke_Cost_Savings__c</fullName>
        <formula>Annual_Stroke_Cost_Savings__c *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Annual Stroke Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Annual_Strokes_Avoided__c</fullName>
        <formula>Annual_Strokes_Avoided__c *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Annual Strokes Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y2_Cume_Office_Visit_Savings__c</fullName>
        <formula>Annual_Office_Visit_Savings__c * 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Cume Office Visit Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Cumulative_ROI__c</fullName>
        <formula>( Total_Year_1_Savings__c +  Y2_Total_Annual_Savings__c )/(2*(Livongo_for_Hypertension_PPPM__c * ( Livongo_for_Hypertension_PwHs__c *0.2) *12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Cumulative ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y2_ED_Visit_Cost_Savings__c</fullName>
        <formula>Annual_ED_Cost_Savings__c *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 ED Visit Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_ED_Visits_Avoided__c</fullName>
        <formula>Annual_Number_of_ED_Visits_Avoided__c *2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 ED Visits Avoided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y2_Total_Annual_Savings__c</fullName>
        <formula>Y2_Annual_Heart_Attack_Cost_Savings__c + Y2_Annual_Stroke_Cost_Savings__c + Annual_ED_Cost_Savings__c + Annual_Office_Visit_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Total Annual Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Total_Cumulative_Savings__c</fullName>
        <formula>Y2_Annual_Heart_Attack_Cost_Savings__c + Y2_Annual_Stroke_Cost_Savings__c + (Annual_ED_Cost_Savings__c *2) + (Annual_Office_Visit_Savings__c *2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Total Cumulative Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y2_Total_Savings_PPPM__c</fullName>
        <formula>Y2_Total_Annual_Savings__c / (12*( Livongo_for_Hypertension_PwHs__c *0.2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y2 Total Savings PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_Heart_Attack_Cost_Savings__c</fullName>
        <formula>Annual_Heart_Attack_Cost_Savings__c *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Annual Heart Attack Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_Heart_Attacks_Avoided__c</fullName>
        <formula>Annual_Heart_Attacks_Avoided__c *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Annual Heart Attacks Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_ROI__c</fullName>
        <formula>Y3_Total_Annual_Savings__c /
(Livongo_for_Hypertension_PPPM__c * ( Livongo_for_Hypertension_PwHs__c *0.2) *12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Annual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_Stroke_Cost_Savings__c</fullName>
        <formula>Annual_Stroke_Cost_Savings__c *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Annual Stroke Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Annual_Strokes_Avoided__c</fullName>
        <formula>Annual_Strokes_Avoided__c *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Annual Strokes Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y3_Cume_Office_Visit_Savings__c</fullName>
        <formula>Annual_Office_Visit_Savings__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Cume Office Visit Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Cumulative_ROI__c</fullName>
        <formula>( Total_Year_1_Savings__c +  Y2_Total_Annual_Savings__c + Y3_Total_Annual_Savings__c )/(3*(Livongo_for_Hypertension_PPPM__c * ( Livongo_for_Hypertension_PwHs__c *0.2) *12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Cumulative ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y3_ED_Cost_Savings__c</fullName>
        <formula>Annual_ED_Cost_Savings__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 ED Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Number_of_ED_Visits_Avoided__c</fullName>
        <formula>Annual_Number_of_ED_Visits_Avoided__c *3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Number of ED Visits Avoided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y3_Total_Annual_Savings__c</fullName>
        <formula>Y3_Annual_Heart_Attack_Cost_Savings__c + Y3_Annual_Stroke_Cost_Savings__c + Annual_ED_Cost_Savings__c + Annual_Office_Visit_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Total Annual Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Total_Cumulative_Savings__c</fullName>
        <formula>Y3_Annual_Heart_Attack_Cost_Savings__c + Y3_Annual_Stroke_Cost_Savings__c + (Annual_ED_Cost_Savings__c *3) + (Annual_Office_Visit_Savings__c *3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Total Cumulative Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3_Total_Savings_PPPM__c</fullName>
        <formula>Y3_Total_Annual_Savings__c / (12*( Livongo_for_Hypertension_PwHs__c *0.2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Y3 Total Savings PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_DPP_Cost_Savings__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c
*
2863.28304956763)
/
Estimated_Enrolled_DPP_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 DPP Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_DPP_Per_Member_cost__c</fullName>
        <formula>Livongo_DPP_PPPM__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 DPP Per Member Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_DPP_Projected_ROI__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c*2863.28304956763)
/
(Year_1_DPP_Per_Member_cost__c *Estimated_Enrolled_DPP_Population__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 DPP Projected ROI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_HTN_ROI__c</fullName>
        <formula>Total_Year_1_Savings__c /
(Livongo_for_Hypertension_PPPM__c * ( Livongo_for_Hypertension_PwHs__c *0.2) *12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 HTN ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2_Cume_DPP_Projected_ROI__c</fullName>
        <formula>(
(Projected_Total_DPP_Cases_Prevented__c * 2863.28304956763)
+
(Projected_Total_DPP_Cases_Prevented__c *3702.90108435376))
/
(( Year_1_DPP_Per_Member_cost__c *  Estimated_Enrolled_DPP_Population__c )
+
(( Year_2_DPP_Per_Member_Cost__c *  Estimated_Enrolled_DPP_Population__c )*0.5)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Cume DPP Projected ROI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_DPP_Cost_Savings__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c
*
3702.90108435376)
/
Estimated_Enrolled_DPP_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 DPP Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_DPP_Per_Member_Cost__c</fullName>
        <formula>Year_2_DPP_Price__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2+ DPP Per Member Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_DPP_Price__c</fullName>
        <label>Year 2+ DPP Price</label>
        <summarizedField>OpportunityLineItem.Year_2_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.OpportunityProductName__c</field>
            <operation>equals</operation>
            <value>Livongo Diabetes Prevention Program</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_3_Cume_DPP_Projected_ROI__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c * 9294.942747)
/
(
( Year_1_DPP_Per_Member_cost__c *  Estimated_Enrolled_DPP_Population__c )
+
(( Year_2_DPP_Per_Member_Cost__c *  Estimated_Enrolled_DPP_Population__c )*0.5)
+
(( Year_2_DPP_Per_Member_Cost__c *  Estimated_Enrolled_DPP_Population__c )*0.25)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Cume DPP Projected ROI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_DPP_Cost_Savings__c</fullName>
        <formula>(Projected_Total_DPP_Cases_Prevented__c
*
2728.75861305493)
/
Estimated_Enrolled_DPP_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 DPP Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com_del__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.ddc_prospector__Sourced_from_Data_com__c = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrengthOpptyExtId__c</fullName>
        <externalId>true</externalId>
        <label>myStrengthOpptyExtId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrengthOpptyPotentialRevenue__c</fullName>
        <label>myStrengthOpptyPotentialRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Bill_To_Tier__c</fullName>
        <label>Bill To Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                    <default>true</default>
                    <label>End User</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is just to get data from NetSuite and then put into standard Contract field. It is needed because standard Contract field isn&apos;t accessible from API so NetSuite can&apos;t cache it.</description>
        <label>Celigo Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Celigo Opportunities</relationshipLabel>
        <relationshipName>Celigo_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Current_Opportunity_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Current Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Current_Sales_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Current Sales Order Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.netsuite_conn__Channel_Tier__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Eligible_Account_For_Channel_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eligible Account For Channel Sales</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>ChannelSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (End User)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__From_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities (From Contract)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NSRenewal_Opportunity_Internal_Id__c</fullName>
        <label>NSRenewal Opportunity Internal Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NS_Renewal_Transaction_Internal_Id__c</fullName>
        <label>NS Renewal Transaction Internal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Contract_Id__c</fullName>
        <label>NetSuite Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Contract_Term__c</fullName>
        <label>NetSuite Contract Term [del from packag]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Project_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>NetSuite Project Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Renewal_Terms__c</fullName>
        <label>NetSuite Renewal Terms</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sales_Order_Number__c</fullName>
        <label>NetSuite Sales Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract - New</fullName>
                </value>
                <value>
                    <fullName>Contract - Upsell</fullName>
                </value>
                <value>
                    <fullName>Contract - Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__Originated_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then don&apos;t create a Sales Order back in NetSuite.</description>
        <label>Originated From NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>